[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/portraits/card_NULL.png" type="Texture" id=1]
[ext_resource path="res://Fonts/BarlowCondensed-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/SceneScripts/CardNode.gd" type="Script" id=3]
[ext_resource path="res://Art/backgrounds/card_blank.png" type="Texture" id=4]
[ext_resource path="res://Art/types/type_null.png" type="Texture" id=5]
[ext_resource path="res://Art/Rarity/rarity.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="CardNode" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="CardBackground" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CardPortrait" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CardType" type="Sprite" parent="."]
position = Vector2( 17, -26 )
texture = ExtResource( 5 )

[node name="CardType2" type="Sprite" parent="."]
visible = false
position = Vector2( -17, -26 )
texture = ExtResource( 5 )

[node name="CardRarity" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -26 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 14, 14 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = 13.0
margin_right = 23.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconZIndex" type="Node2D" parent="."]
z_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="IconZIndex"]
anchor_right = 1.0
margin_left = -44.0
margin_top = -8.0
margin_right = -28.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}
